--- a/index.html
+++ b/index.html
@@ -579,12 +579,12 @@
 
       <div class="medal">
         <div class="front">
-          <img src="/images/reserve_store_medal_front.png" alt="R">
+          <img src="./images/reserve_store_medal_front.png" alt="R">
         </div>
         <div class="back">
-          <img src="./images/reserve_store_medal_back.png" alt="스타a벅스 리저브 매장">
+          <img src="./images/reserve_store_medal_back.png" alt="스타벅스 리저브 매장">
           <a href="iavascript:void(0)">
-            매장안내
+            
           </a>
         </div>
       </div>
